CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(RunawayMonkey CXX)

#Set project version
SET(RUNAWAY_MONKEY_VERSION_MAJOR 0)
SET(RUNAWAY_MONKEY_VERSION_MINOR 1)
SET(RUNAWAY_MONKEY_VERSION_PATCH 0)

#Set output folder for the program
SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

#Set sources and include dirs
INCLUDE_DIRECTORIES(include)
FILE(GLOB SOURCES "src/*.cpp")

#Call the compiler
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
#Link libraries
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfml-system sfml-window sfml-graphics sfml-audio)


